--- a/src/components/Title/Styles.module.css
+++ b/src/components/Title/Styles.module.css
@@ -118,3 +118,34 @@
     border-radius: 100px;
     background: #191D29;
 }
+
+@media only screen and (max-width: 600px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .title {
+        display: flex;
+        justify-content: center;
+    }
+    .title p {
+        font-size: 28px;
+        line-height: 54px;
+    }
+    .subTitle {
+        display: none;
+        /* flex-direction: column; */
+    }
+    .tagDescont {
+        flex-direction: column;
+        margin-left: 20rem;
+    }
+    .tagDescont p {
+        width: 200px;
+        left: 0px;
+    }
+    .rectangleImage {
+        display: none;
+    }
+}
