--- a/src/components/NavBar/Styles.module.css
+++ b/src/components/NavBar/Styles.module.css
@@ -19,6 +19,92 @@
     cursor: pointer;
 }
 
+.menuOpenContainer {
+ -webkit-animation-name: fadeInRight;
+  animation-name: fadeInRight;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+    /* box-shadow: 0 0 0 100vw #fff, 0 0 0 100vh #fff; */
+    /* -webkit-animation: scale-down-ver-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: scale-down-ver-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both; */
+    position: absolute;
+    background-color: #191D29;
+    /* background-color: wheat; */
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    
+}
+@-webkit-keyframes fadeInRight {
+    0% {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    }
+    100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+    }
+    }
+    @keyframes fadeInRight {
+    0% {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    }
+    100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+    }
+}
+.menuOptions h3 {
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(99.46deg, #9DFE00 -10.9%, #14D9E6 97.14%);
+    font-size: 18px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    font-weight: 800;
+    font-style: normal;
+    line-height: 14px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 30%;
+}
+
+/* @-webkit-keyframes scale-down-ver-center {
+    0% {
+      -webkit-transform: scaleY(1);
+              transform: scaleY(1);
+    }
+    100% {
+      -webkit-transform: scaleY(0.3);
+              transform: scaleY(0.3);
+    }
+  }
+  @keyframes scale-down-ver-center {
+    0% {
+      -webkit-transform: scaleY(1);
+              transform: scaleY(1);
+    }
+    100% {
+      -webkit-transform: scaleY(0.3);
+              transform: scaleY(0.3);
+    }
+  } */
+.closeMenu {
+    position: absolute;
+    top: 20px;
+    right: 2rem;
+}
+
 @media (max-width: 600px) {
     .container {
         justify-content: space-around;
