--- a/src/components/ShopItem/Styles.module.css
+++ b/src/components/ShopItem/Styles.module.css
@@ -13,6 +13,7 @@
     display: flex;
 }
 
+
 .describe {
     margin-left: 5%;
     width: 50%;
@@ -85,4 +86,30 @@
     border: 1px solid;
     border-radius: 30px;
     border-color: #9DFE00;
+}
+
+@media (max-width: 999px) {
+    .containerCard {
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .card {
+        width: 100%;
+        height: 50vh;
+        align-items: center;
+    }
+
+    .contaierShortCard {
+        display: none;
+    }
+
+    .describe {
+        width: 100%;
+    }
+
+    .btnBuy, .btnAdd {
+        width: 130px;
+        margin-top: 15px
+    }
 }
