--- a/src/components/Carousel-Galery/Styles.module.css
+++ b/src/components/Carousel-Galery/Styles.module.css
@@ -1,7 +1,7 @@
 .containerCarousel {
-    border: 10px solid;
-    border-radius: 30px;
-    border-color: #FFFFFF;
+    /* border: 10px solid; */
+    /* border-radius: 30px; */
+    /* border-color: #FFFFFF; */
     width: 100%;
     
 }
@@ -15,5 +15,6 @@
     height: 100%;
     margin-right: 15px;
 }
+
 
 
