FEAT - Add item cart

--- a/src/components/Modal/Styles.module.css
+++ b/src/components/Modal/Styles.module.css
@@ -87,3 +87,11 @@
     cursor: pointer!important;
     color: #FFFFFF;
 }
+
+@media (max-width: 999px) {
+    .body {
+        width: 90%;
+    }
+}
+
+
