--- a/src/components/Buttons/Styles.module.css
+++ b/src/components/Buttons/Styles.module.css
@@ -2,6 +2,7 @@
     display: flex;
     margin-left: 10%;
     margin-top: 5%;
+
 }
 
 
@@ -41,6 +42,7 @@
 
 @media (max-width: 600px) {
     .buttons {
+        margin-left: 0%;
         justify-content: center;
     }
     
